tests/ui-stable/transmute-ref-src-not-asbytes.stderr
error[E0277]: the trait bound `Src: AsBytes` is not satisfied
  --> tests/ui-stable/transmute-ref-src-not-asbytes.rs:22:33
   |
22 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                 |
   |                                 the trait `AsBytes` is not implemented for `Src`
   |                                 required by a bound introduced by this call
   |
   = help: the following other types implement trait `AsBytes`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `AssertSrcIsAsBytes`
  --> tests/ui-stable/transmute-ref-src-not-asbytes.rs:22:33
   |
22 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsAsBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: AsBytes` is not satisfied
  --> tests/ui-stable/transmute-ref-src-not-asbytes.rs:22:33
   |
22 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsBytes` is not implemented for `Src`
   |
   = help: the following other types implement trait `AsBytes`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `AssertSrcIsAsBytes`
  --> tests/ui-stable/transmute-ref-src-not-asbytes.rs:22:33
   |
22 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsAsBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
